Fix alignment of labels and input fields
Because the label would shrink, they would not stay lined up correctly

--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -8,3 +8,8 @@
 .Input .form-warning {
   color: var(--ourWarningColor);
 }
+
+.Input .label {
+  flex-basis: 4.5em;
+  flex-shrink: 0;
+}
